conditions.Conditions.scala.error
Erreur de compilation :
Conditions:3: error: illegal start of simple expression
	}
        ^